@@ -1,3 +1,13 @@
+2011-01-14  Joel Brobecker  <brobecker@adacore.com>
+
+	* ia64-hpux-nat.c (ia64_hpux_fetch_register): Remove trailing
+	new-line at end of warning message.
+	(ia64_hpux_store_register): Remove trailing new-line at end of
+	error message.
+	* ia64-hpux-tdep.c: Rephrase comment.
+	* solib-ia64-hpux.c (struct dld_info): Change type of field
+	dld_flags from "long long" to ULONGEST.
+
 2011-01-14  Pedro Alves  <pedro@codesourcery.com>
 
 	* target.h (deprecated_child_ops): Delete declaration.
